--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@metamask/providers": "^9.1.0",
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.8",
+    "ethers": "^5.7.0",
     "next": "12.2.5",
     "postcss": "^8.4.16",
     "react": "18.2.0",
