--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@metamask/providers": "^9.1.0",
+    "@openzeppelin/contracts": "^4.7.3",
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.8",
     "ethers": "^5.7.0",
